--- a/request.ipynb
+++ b/request.ipynb
@@ -2,130 +2,303 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
     "import pandas as pd\n",
-    "import plotly.express as px"
+    "import plotly.express as px\n",
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Base URL for the OpenSenseMap API\n",
+    "base_url = \"https://api.opensensemap.org/boxes\"\n",
+    "# SenseBox ID\n",
+    "senseBoxId = \"6645db6eeb5aad0007a6e4b6\"\n",
+    "# List of Sensor IDs\n",
+    "sensorIds = [\n",
+    "    \"6645db6eeb5aad0007a6e4b7\",  # Replace with actual sensor IDs\n",
+    "    \"6645db6eeb5aad0007a6e4b8\",\n",
+    "    \"6645db6eeb5aad0007a6e4b9\",\n",
+    "    \"6645db6eeb5aad0007a6e4ba\"\n",
+    "]\n",
+    "\n",
+    "# Parameters\n",
+    "params = {\n",
+    "    'format': 'json',            # or 'csv' if you prefer CSV format\n",
+    "    'from-date': '2024-05-18T19:00:00Z',\n",
+    "    'to-date': datetime.isoformat() + 'Z',  # Current date and time in UTC\n",
+    "    'download': 'true',          # This forces a download if format is 'csv'\n",
+    "    'outliers': 'mark',          # Optional: 'mark' or 'replace' if outlier detection is needed\n",
+    "    'outlier-window': 15,        # Optional: default is 15, can be 1-50\n",
+    "    'delimiter': 'comma'         # Optional: 'comma' or 'semicolon' for CSV\n",
+    "}\n",
+    "\n",
+    "# Initialize an empty list to hold the data\n",
+    "all_data = []\n",
+    "\n",
+    "# Loop through each sensor ID and retrieve data\n",
+    "for sensorId in sensorIds:\n",
+    "    # Construct the endpoint URL\n",
+    "    endpoint = f'{base_url}/{senseBoxId}/data/{sensorId}'\n",
+    "    \n",
+    "    # Send the GET request to the API\n",
+    "    response = requests.get(endpoint, params=params)\n",
+    "    \n",
+    "    # Check if the request was successful\n",
+    "    if response.status_code == 200:\n",
+    "        # Convert response data to JSON\n",
+    "        data = response.json()\n",
+    "        # Add sensor ID to each measurement\n",
+    "        for measurement in data:\n",
+    "            measurement['Id'] = sensorId\n",
+    "        # Append data to the list\n",
+    "        all_data.extend(data)\n",
+    "    else:\n",
+    "        print(f'Error retrieving data for sensor {sensorId}: {response.status_code}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert the list of data to a DataFrame\n",
+    "df = pd.DataFrame(all_data)\n",
+    "\n",
+    "# Convert the 'createdAt' column to datetime\n",
+    "df['createdAt'] = pd.to_datetime(df['createdAt'])\n",
+    "\n",
+    "# Pivot the DataFrame so that each sensor's data is in its own column\n",
+    "sense_df = df.pivot_table(index='createdAt', columns='Id', values='value', aggfunc='first')\n",
+    "sense_df.reset_index(inplace=True)\n",
+    "\n",
+    "# Rename columns to more descriptive names\n",
+    "sense_df.rename(columns={'Id': 'Index',\n",
+    "                         'createdAt': 'Messzeitpunkt',\n",
+    "                         '6645db6eeb5aad0007a6e4b7': 'Temperatur',\n",
+    "                         '6645db6eeb5aad0007a6e4b8': 'rel. Luftfeuchte',\n",
+    "                         '6645db6eeb5aad0007a6e4b9': 'Luftdruck',\n",
+    "                         '6645db6eeb5aad0007a6e4ba': 'UV-Intensität'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "    \"_id\": \"6645db6eeb5aad0007a6e4b6\",\n",
-      "    \"grouptag\": [\n",
-      "        \"edu\"\n",
-      "    ],\n",
-      "    \"model\": \"custom\",\n",
-      "    \"name\": \"Pferdestall\",\n",
-      "    \"currentLocation\": {\n",
-      "        \"type\": \"Point\",\n",
-      "        \"coordinates\": [\n",
-      "            8.410042,\n",
-      "            49.001548\n",
-      "        ],\n",
-      "        \"timestamp\": \"2024-05-16T10:09:50.187Z\"\n",
-      "    },\n",
-      "    \"exposure\": \"outdoor\",\n",
-      "    \"sensors\": [\n",
-      "        {\n",
-      "            \"_id\": \"6645db6eeb5aad0007a6e4b7\",\n",
-      "            \"icon\": \"osem-thermometer\",\n",
-      "            \"title\": \"Temperatur\",\n",
-      "            \"unit\": \"\\u00b0C\",\n",
-      "            \"sensorType\": \"HDC1080\",\n",
-      "            \"lastMeasurement\": {\n",
-      "                \"createdAt\": \"2024-05-16T16:33:00.961Z\",\n",
-      "                \"value\": \"21.92\"\n",
-      "            }\n",
-      "        },\n",
-      "        {\n",
-      "            \"_id\": \"6645db6eeb5aad0007a6e4b8\",\n",
-      "            \"icon\": \"osem-humidity\",\n",
-      "            \"title\": \"rel. Luftfeuchte\",\n",
-      "            \"unit\": \"%\",\n",
-      "            \"sensorType\": \"HDC1080\",\n",
-      "            \"lastMeasurement\": {\n",
-      "                \"createdAt\": \"2024-05-16T16:33:00.961Z\",\n",
-      "                \"value\": \"52.72\"\n",
-      "            }\n",
-      "        },\n",
-      "        {\n",
-      "            \"_id\": \"6645db6eeb5aad0007a6e4b9\",\n",
-      "            \"icon\": \"osem-barometer\",\n",
-      "            \"title\": \"Luftdruck\",\n",
-      "            \"unit\": \"hPa\",\n",
-      "            \"sensorType\": \"DPS310\",\n",
-      "            \"lastMeasurement\": {\n",
-      "                \"createdAt\": \"2024-05-16T16:33:00.961Z\",\n",
-      "                \"value\": \"990.80\"\n",
-      "            }\n",
-      "        },\n",
-      "        {\n",
-      "            \"_id\": \"6645db6eeb5aad0007a6e4ba\",\n",
-      "            \"icon\": \"osem-brightness\",\n",
-      "            \"title\": \"UV-Intensit\\u00e4t\",\n",
-      "            \"unit\": \"\\u03bcW/cm\\u00b2\",\n",
-      "            \"sensorType\": \"VEML6070\",\n",
-      "            \"lastMeasurement\": {\n",
-      "                \"createdAt\": \"2024-05-16T16:33:00.961Z\",\n",
-      "                \"value\": \"151.88\"\n",
-      "            }\n",
-      "        }\n",
-      "    ],\n",
-      "    \"updatedAt\": \"2024-05-16T16:33:01.016Z\",\n",
-      "    \"createdAt\": \"2024-05-16T10:09:50.193Z\",\n",
-      "    \"lastMeasurementAt\": \"2024-05-16T16:33:00.961Z\",\n",
-      "    \"loc\": [\n",
-      "        {\n",
-      "            \"geometry\": {\n",
-      "                \"type\": \"Point\",\n",
-      "                \"coordinates\": [\n",
-      "                    8.410042,\n",
-      "                    49.001548\n",
-      "                ],\n",
-      "                \"timestamp\": \"2024-05-16T10:09:50.187Z\"\n",
-      "            },\n",
-      "            \"type\": \"Feature\"\n",
-      "        }\n",
-      "    ]\n",
-      "}\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Id</th>\n",
+       "      <th>Messzeitpunkt</th>\n",
+       "      <th>Temperatur</th>\n",
+       "      <th>rel. Luftfeuchte</th>\n",
+       "      <th>Luftdruck</th>\n",
+       "      <th>UV-Intensität</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-05-18 19:00:21.702000+00:00</td>\n",
+       "      <td>15.82</td>\n",
+       "      <td>77.48</td>\n",
+       "      <td>998.12</td>\n",
+       "      <td>5.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-05-18 19:01:21.937000+00:00</td>\n",
+       "      <td>15.69</td>\n",
+       "      <td>77.58</td>\n",
+       "      <td>998.12</td>\n",
+       "      <td>5.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-05-18 19:02:22.121000+00:00</td>\n",
+       "      <td>15.57</td>\n",
+       "      <td>78.42</td>\n",
+       "      <td>998.17</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-05-18 19:03:22.220000+00:00</td>\n",
+       "      <td>15.57</td>\n",
+       "      <td>78.42</td>\n",
+       "      <td>998.19</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-05-18 19:04:22.256000+00:00</td>\n",
+       "      <td>15.56</td>\n",
+       "      <td>78.93</td>\n",
+       "      <td>998.15</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3723</th>\n",
+       "      <td>2024-05-21 09:10:42.584000+00:00</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>89.48</td>\n",
+       "      <td>994.16</td>\n",
+       "      <td>90.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3724</th>\n",
+       "      <td>2024-05-21 09:11:42.491000+00:00</td>\n",
+       "      <td>16.15</td>\n",
+       "      <td>89.14</td>\n",
+       "      <td>994.13</td>\n",
+       "      <td>106.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3725</th>\n",
+       "      <td>2024-05-21 09:12:42.685000+00:00</td>\n",
+       "      <td>16.28</td>\n",
+       "      <td>88.02</td>\n",
+       "      <td>994.13</td>\n",
+       "      <td>106.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3726</th>\n",
+       "      <td>2024-05-21 09:13:42.770000+00:00</td>\n",
+       "      <td>16.39</td>\n",
+       "      <td>87.58</td>\n",
+       "      <td>994.12</td>\n",
+       "      <td>118.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3727</th>\n",
+       "      <td>2024-05-21 09:14:42.846000+00:00</td>\n",
+       "      <td>16.41</td>\n",
+       "      <td>87.68</td>\n",
+       "      <td>994.13</td>\n",
+       "      <td>112.50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3728 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Id                      Messzeitpunkt Temperatur rel. Luftfeuchte Luftdruck  \\\n",
+       "0    2024-05-18 19:00:21.702000+00:00      15.82            77.48    998.12   \n",
+       "1    2024-05-18 19:01:21.937000+00:00      15.69            77.58    998.12   \n",
+       "2    2024-05-18 19:02:22.121000+00:00      15.57            78.42    998.17   \n",
+       "3    2024-05-18 19:03:22.220000+00:00      15.57            78.42    998.19   \n",
+       "4    2024-05-18 19:04:22.256000+00:00      15.56            78.93    998.15   \n",
+       "...                               ...        ...              ...       ...   \n",
+       "3723 2024-05-21 09:10:42.584000+00:00      16.00            89.48    994.16   \n",
+       "3724 2024-05-21 09:11:42.491000+00:00      16.15            89.14    994.13   \n",
+       "3725 2024-05-21 09:12:42.685000+00:00      16.28            88.02    994.13   \n",
+       "3726 2024-05-21 09:13:42.770000+00:00      16.39            87.58    994.12   \n",
+       "3727 2024-05-21 09:14:42.846000+00:00      16.41            87.68    994.13   \n",
+       "\n",
+       "Id   UV-Intensität  \n",
+       "0             5.62  \n",
+       "1             5.62  \n",
+       "2             0.00  \n",
+       "3             0.00  \n",
+       "4             0.00  \n",
+       "...            ...  \n",
+       "3723         90.00  \n",
+       "3724        106.88  \n",
+       "3725        106.88  \n",
+       "3726        118.12  \n",
+       "3727        112.50  \n",
+       "\n",
+       "[3728 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "base_url = \"https://api.opensensemap.org/boxes\"\n",
-    "sense_id = \"6645db6eeb5aad0007a6e4b6\"\n",
-    "last_measurement_timestamp = \"2024-05-16T00:00:00.000Z\"\n",
-    "\n",
-    "params = {\n",
-    "    'format': 'json',  # Optional: 'geojson' if you want the data in GeoJSON format\n",
-    "    'from-date': last_measurement_timestamp\n",
-    "}\n",
-    "endpoint = f'{base_url}/{sense_id}'\n",
-    "\n",
-    "# API-Anfrage senden\n",
-    "response = requests.get(endpoint, params=params)\n",
-    "\n",
-    "# Überprüfen, ob die Anfrage erfolgreich war\n",
-    "if response.status_code == 200:\n",
-    "    # Antwortdaten in JSON konvertieren\n",
-    "    data = response.json()\n",
-    "    # Daten anzeigen\n",
-    "    print(json.dumps(data, indent=4))\n",
-    "else:\n",
-    "    print(f'Fehler: {response.status_code}')"
+    "sense_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Id\n",
+       "Messzeitpunkt       datetime64[ns, UTC]\n",
+       "Temperatur                       object\n",
+       "rel. Luftfeuchte                 object\n",
+       "Luftdruck                        object\n",
+       "UV-Intensität                    object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sense_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optionally save the DataFrame to a CSV file\n",
+    "sense_df.to_csv('sensor_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
