erstes dashboard erstellt

--- a/Dashboard/Dashboard.ipynb
+++ b/Dashboard/Dashboard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,29 +17,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8050/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x11c2c0f50>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'dash' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Initialize Dash app\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m app \u001b[38;5;241m=\u001b[39m \u001b[43mdash\u001b[49m\u001b[38;5;241m.\u001b[39mDash(\u001b[38;5;18m__name__\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Create layout\u001b[39;00m\n\u001b[1;32m      5\u001b[0m app\u001b[38;5;241m.\u001b[39mlayout \u001b[38;5;241m=\u001b[39m html\u001b[38;5;241m.\u001b[39mDiv([\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;66;03m# Graph component\u001b[39;00m\n\u001b[1;32m      7\u001b[0m     dcc\u001b[38;5;241m.\u001b[39mGraph(\u001b[38;5;28mid\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlive-graph\u001b[39m\u001b[38;5;124m'\u001b[39m),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     14\u001b[0m     )\n\u001b[1;32m     15\u001b[0m ])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dash' is not defined"
+     ]
     }
    ],
    "source": [
@@ -89,6 +79,128 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run_server(debug=True, use_reloader=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Base URL for the OpenSenseMap API\n",
+    "base_url = \"https://api.opensensemap.org/boxes\"\n",
+    "# SenseBox ID\n",
+    "senseBoxId = \"6645db6eeb5aad0007a6e4b6\"\n",
+    "# List of Sensor IDs\n",
+    "sensorIds = [\n",
+    "    \"6645db6eeb5aad0007a6e4b7\",  # Replace with actual sensor IDs\n",
+    "    \"6645db6eeb5aad0007a6e4b8\",\n",
+    "    \"6645db6eeb5aad0007a6e4b9\",\n",
+    "    \"6645db6eeb5aad0007a6e4ba\"\n",
+    "]\n",
+    "\n",
+    "# Parameters\n",
+    "params = {\n",
+    "    'format': 'json',            # or 'csv' if you prefer CSV format\n",
+    "    'from-date': '2024-05-18T09:00:00Z',\n",
+    "    #'to-date': datetime.now(),\n",
+    "    'download': 'true',          # This forces a download if format is 'csv'\n",
+    "    'outliers': 'mark',          # Optional: 'mark' or 'replace' if outlier detection is needed\n",
+    "    'outlier-window': 15,        # Optional: default is 15, can be 1-50\n",
+    "    'delimiter': 'comma'         # Optional: 'comma' or 'semicolon' for CSV\n",
+    "}\n",
+    "\n",
+    "# Initialize an empty list to hold the data\n",
+    "all_data = []\n",
+    "\n",
+    "# Loop through each sensor ID and retrieve data\n",
+    "for sensorId in sensorIds:\n",
+    "    # Construct the endpoint URL\n",
+    "    endpoint = f'{base_url}/{senseBoxId}/data/{sensorId}'\n",
+    "    \n",
+    "    # Send the GET request to the API\n",
+    "    response = requests.get(endpoint, params=params)\n",
+    "    \n",
+    "    # Check if the request was successful\n",
+    "    if response.status_code == 200:\n",
+    "        # Convert response data to JSON\n",
+    "        data = response.json()\n",
+    "        # Add sensor ID to each measurement\n",
+    "        for measurement in data:\n",
+    "            measurement['Id'] = sensorId\n",
+    "            # Check for outliers and add an 'outlier' column\n",
+    "            if 'outlier' in measurement:\n",
+    "                measurement['outlier'] = measurement['outlier']\n",
+    "            else:\n",
+    "                measurement['outlier'] = None  # If no outlier info, set as None\n",
+    "        # Append data to the list\n",
+    "        all_data.extend(data)\n",
+    "    else:\n",
+    "        print(f'Error retrieving data for sensor {sensorId}: {response.status_code}')\n",
+    "\n",
+    "# Convert the list of data to a DataFrame\n",
+    "sense_df = pd.DataFrame(all_data)\n",
+    "sense_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dash\n",
+    "from dash import html\n",
+    "\n",
+    "app = dash.Dash(__name__)\n",
+    "\n",
+    "# Layout definieren\n",
+    "app.layout = html.Div([\n",
+    "    # Streifen auf der linken Seite\n",
+    "    html.Div(\n",
+    "        id='side-panel',\n",
+    "        style={\n",
+    "            'width': '25%',  # Breite des Streifens einstellen\n",
+    "            'position': 'fixed',  # Position fixieren\n",
+    "            'top': 0,  # Oben anordnen\n",
+    "            'left': 0,  # Links anordnen\n",
+    "            'bottom': 0,  # Unten anordnen\n",
+    "            'backgroundColor': '#f0f0f0',  # Hintergrundfarbe einstellen\n",
+    "            'overflowY': 'scroll'  # Scrollen ermöglichen, wenn der Inhalt überläuft\n",
+    "        },\n",
+    "        children=[\n",
+    "            # Inhalte des Streifens\n",
+    "            html.Div([\n",
+    "                html.H2('Umweltmonitoring SS24 Projektarbeit'),\n",
+    "                html.P('Hier kannst du verschiedene Informationen anzeigen lassen.'),\n",
+    "                # Beispielbild mit angepasster Größe\n",
+    "                html.Img(\n",
+    "                    src='https://docs.sensebox.de/images/2020-10-16-opensensemap-faq/openSenseMap_github.png',\n",
+    "                    style={\n",
+    "                        'width': '90px',  # Breite des Bildes einstellen\n",
+    "                        'height': '40px'  # Höhe des Bildes einstellen\n",
+    "                    }\n",
+    "                )\n",
+    "            ], style={'padding': '20px'})\n",
+    "        ]\n",
+    "    ),\n",
+    "    \n",
+    "    # Hauptinhalt auf der rechten Seite\n",
+    "    html.Div([\n",
+    "        html.H1('Hauptinhalt'),\n",
+    "        html.P('Hier befindet sich der Hauptinhalt der Seite.')\n",
+    "    ], style={'marginLeft': '40%', 'padding': '10px'})  # Linken Rand einstellen, um Platz für den Streifen zu machen\n",
+    "])\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run_server(debug=True)\n"
    ]
   }
  ],
